--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-    <h1>Homework</h1>
+    <h1>Homework 4</h1>
     <script src="./js/script.js"></script>
 </body>
 </html>
