Added Prettier and Eslint to main

--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <title>Homework 12</title>
+        <title>Homework</title>
     </head>
     <body>
-        <h1>Homework 12</h1>
+        <h1>Homework</h1>
     </body>
     <script src="js/script.js"></script>
 </html>
