--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <title>Homework 17</title>
+        <title>Homework</title>
     </head>
     <body>
         <h1>Homework</h1>
