--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <title>Homework</title>
+        <title>Homework 33</title>
     </head>
-    <body>
-        <h1>Homework</h1>
+    <body class="body">
+        <h1>Homework 33</h1>
     </body>
     <script src="js/script.js"></script>
 </html>
