--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,20 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <title>Homework</title>
+        <title>Homework 34</title>
     </head>
     <body>
-        <h1>Homework</h1>
+        <h1>Homework 34</h1>
+        <form style="display: flex; align-items: center; gap: 10px">
+            <input
+                style="padding: 20px; width: 300px"
+                type="text"
+                placeholder="Enter your name"
+            />
+            <div class="info" style="display: none; font-size: 20px">
+                Some value for this input
+            </div>
+        </form>
     </body>
     <script src="js/script.js"></script>
 </html>
