refactor: code refactored as instructed

--- a/src/index.html
+++ b/src/index.html
@@ -6,16 +6,14 @@
     </head>
     <body>
         <h1>Homework 34</h1>
-        <form style="display: flex; align-items: center; gap: 10px">
+        <div style="display: flex; align-items: center; gap: 20px">
             <input
-                style="padding: 20px; width: 300px"
-                type="text"
+                data-info-input
+                style="font-size: 20px; padding: 20px; width: 340px"
                 placeholder="Enter your name"
+                type="text"
             />
-            <div class="info" style="display: none; font-size: 20px">
-                Some value for this input
-            </div>
-        </form>
+        </div>
     </body>
     <script src="js/script.js"></script>
 </html>
