--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
         <title>Homework</title>
     </head>
     <body>
-        <h1>Homework</h1>
+        <h1>Homework 36</h1>
     </body>
     <script src="js/script.js"></script>
 </html>
