--- a/src/index.html
+++ b/src/index.html
@@ -56,6 +56,88 @@
             </div>
         </main>
 
-        <script src="./js/app.js"></script>
+        <!-- Modal -->
+        <div
+            class="modal fade"
+            id="editModalItem"
+            data-bs-backdrop="static"
+            data-bs-keyboard="false"
+            tabindex="-1"
+            aria-labelledby="staticBackdropLabel"
+            aria-hidden="true"
+        >
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h1
+                            data-modal-title
+                            class="modal-title fs-5"
+                            id="staticBackdropLabel"
+                        >
+                            Modal title
+                        </h1>
+                        <button
+                            type="button"
+                            class="btn-close"
+                            data-bs-dismiss="modal"
+                            aria-label="Close"
+                        ></button>
+                    </div>
+                    <form>
+                        <div class="modal-body">
+                            <div class="mb-3">
+                                <label
+                                    for="exampleFormControlInput1"
+                                    class="form-label"
+                                    >Title</label
+                                >
+                                <input
+                                    type="text"
+                                    name="title"
+                                    class="form-control"
+                                    id="exampleFormControlInput1"
+                                />
+                            </div>
+                            <div class="mb-3">
+                                <label
+                                    for="exampleFormControlTextarea1"
+                                    class="form-label"
+                                    >Description</label
+                                >
+                                <textarea
+                                    class="form-control"
+                                    name="description"
+                                    id="exampleFormControlTextarea1"
+                                    rows="3"
+                                ></textarea>
+                            </div>
+                        </div>
+                        <div class="modal-footer">
+                            <button
+                                type="button"
+                                class="btn btn-secondary"
+                                data-bs-dismiss="modal"
+                            >
+                                Close
+                            </button>
+                            <button
+                                data-modal-btn-save
+                                type="button"
+                                class="btn btn-primary"
+                            >
+                                Save changes
+                            </button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+
+        <script
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+            crossorigin="anonymous"
+        ></script>
+        <script type="module" src="./js/app.js"></script>
     </body>
 </html>
