--- a/src/index.html
+++ b/src/index.html
@@ -83,7 +83,7 @@
                             aria-label="Close"
                         ></button>
                     </div>
-                    <form>
+                    <form data-modal-from>
                         <div class="modal-body">
                             <div class="mb-3">
                                 <label
