--- a/src/index.html
+++ b/src/index.html
@@ -7,5 +7,5 @@
     <body>
         <h1>Homework 42</h1>
     </body>
-    <script src="js/script.js"></script>
+    <script type="module" src="js/script.js"></script>
 </html>
