--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <title>Homework</title>
+        <title>Homework 45</title>
     </head>
     <body>
-        <h1>Homework</h1>
+        <h1>Homework 45</h1>
     </body>
-    <script src="js/script.js"></script>
+    <script type="module" src="js/script.js"></script>
 </html>
