--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,48 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <title>Homework</title>
+        <title>Homework 46</title>
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+            crossorigin="anonymous"
+        />
+        <link rel="stylesheet" href="./styles/style.css" />
     </head>
     <body>
-        <h1>Homework</h1>
+        <h1>Homework 46</h1>
+        <form class="form">
+            <div
+                data-input-id-wrapper
+                class="input-group form-control input-group-lg"
+            >
+                <span class="input-group-text" id="inputGroup-sizing-lg"
+                    >Post ID</span
+                >
+                <input
+                    type="number"
+                    data-form-input-id
+                    class="form-control"
+                    aria-label="Sizing example input"
+                    aria-describedby="inputGroup-sizing-lg"
+                />
+            </div>
+            <div class="col-12">
+                <button
+                    data-form-submit
+                    class="btn btn-primary"
+                    type="submit"
+                    disabled
+                >
+                    Find Post
+                </button>
+            </div>
+            <div
+                data-id-finder-error
+                class="bd-callout bd-callout-danger bold d-none me-auto ms-auto"
+            ></div>
+        </form>
     </body>
-    <script src="js/script.js"></script>
+    <script type="module" src="js/script.js"></script>
 </html>
